refactor: Migrate to Spark 4.0 API changes
  Updated codebase to work with Spark 4.0 API changes:
  - Replaced deprecated WrappedArray with ArraySeq for Scala 2.13 compatibility
  - Updated JavaConverters to CollectionConverters following Scala deprecation
  - Changed Column.expr() to Column.node() and adopted ExpressionUtils for expression/column conversions
  - Reimplemented array_join with column separator using Column$.MODULE$.fn to work around private access restrictions in Spark 4.0
  - Excluded log4j-slf4j2-impl from spark-sql dependency to prevent logging implementation conflicts during tests

  🤖 Generated with [Claude Code](https://claude.com/claude-code)

  Co-Authored-By: Claude <noreply@anthropic.com>